--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -1,36 +1,64 @@
 ---
-layout: archive
+layout: single
 title: "Publications"
 permalink: /publications/
 author_profile: true
 ---
 
-{% if site.author.googlescholar %}
-  <div class="wordwrap">You can also find my articles on <a href="{{site.author.googlescholar}}">my Google Scholar profile</a>.</div>
-{% endif %}
+You can also find my articles on <a href="{{ site.author.googlescholar }}">my Google Scholar profile</a>.
 
-{% include base_path %}
+---
 
-<!-- New style rendering if publication categories are defined -->
-{% if site.publication_category %}
-  {% for category in site.publication_category  %}
-    {% assign title_shown = false %}
-    {% for post in site.publications reversed %}
-      {% if post.category != category[0] %}
-        {% continue %}
-      {% endif %}
-      {% unless title_shown %}
-        <h2>{{ category[1].title }}</h2><hr />
-        {% assign title_shown = true %}
-      {% endunless %}
-      {% include archive-single.html %}
-    {% endfor %}
-  {% endfor %}
-{% else %}
-  {% for post in site.publications reversed %}
-    {% include archive-single.html %}
-  {% endfor %}
-{% endif %}
+## I turned the following block to a comment
+<!--
 
+### 2025
 
+- **Farghadani-Chaharsooghi, P.**, Hashemi Doulabi, H., Rei, W., Gendreau, M. (2025).  
+  *A Learning-Based Heuristic for Stochastic Casualty Response Planning with Hospital Evacuation.*  
+  Will be submitted to *INFORMS Journal on Optimization*.
 
+- **Farghadani-Chaharsooghi, P.**, Hashemi Doulabi, H., Rei, W., Gendreau, M. (2025).  
+  *Stochastic Dual Dynamic Programming for Multi-Stage Casualty Response Planning with Platelet Inventory Management.*  
+  Submitted to *INFORMS Journal on Computing*.
+
+-->
+
+---
+
+### 2024
+
+- **Farghadani-Chaharsooghi, P.**, Hashemi Doulabi, H., Rei, W., Gendreau, M. (2024).  
+  *Stochastic Casualty Response Planning with Multiple Classes of Patients.*  
+  *Computers & Operations Research*, under first revision.
+
+---
+
+### 2023
+
+- **Farghadani-Chaharsooghi, P.**, & Karimi, B. (2023).  
+  *A Robust Optimization Approach for the Production-Routing Problem with Lateral Transshipment and Outsourcing.*  
+  *RAIRO - Operations Research*, 57(4), 1957–1981.  
+  [Link](https://doi.org/10.1051/ro/2023045)
+
+---
+
+### 2022
+
+- **Farghadani-Chaharsooghi, P.**, Kamranfar, P., Mirzapour Al-e-Hashem, M. S., & Rekik, Y. (2022).  
+  *A Joint Production–Workforce–Delivery Stochastic Planning Problem for Perishable Items.*  
+  *International Journal of Production Research*, 60(20), 6148–6172.  
+  [Link](https://doi.org/10.1080/00207543.2021.1977561)
+
+- Majidi, A., **Farghadani-Chaharsooghi, P.**, & Mirzapour Al-e-Hashem, S. M. J. (2022).  
+  *Sustainable Pricing–Production–Workforce–Routing Problem for Perishable Products Considering Demand Uncertainty: A Case Study from the Dairy Industry.*  
+  *Transportation Journal*, 61(1), 60–102.  
+  [Link](https://doi.org/10.5325/transportationj.61.1.0060)
+
+---
+
+### 2019
+
+- Dehghanpour-Amniyeh, P., **Farghadani-Chaharsooghi, P.**, & Rasti-Barzoki, M. (2019).  
+  *Supply Chain and Project Management Contracts.*  
+  Isfahan University of Technology Publication Center. (170-page book)
